# UniversityDataBase

./: Build.sh  CMakeLists.txt  ClearDatabase.sh  Employee.cpp  MenuManager.cpp  Person.cpp  PersonManager.cpp  README.md  Run.sh  Student.cpp  main.cpp  testRunner.cpp
Headers/: Employee.hpp  MenuManager.hpp  Person.hpp  PersonManager.hpp  Student.hpp
database_testBackup/: database.txt  database2.txt
